--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
     <section class="hero">
 
       <div class="overlay">
-        <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
+        <div class="hero-text">
+          <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
         <a href="#" class="button ancor">Заказать услугу</a>
+        </div>
       </div>
     </section>
 
