fixes blue border in nav

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   
         <ul class="site-nav list">
           <li class="item"><a href="./index.html" class="link ancor">Студия</a></li>
-          <li class="item current"><a href="./portfolio.html" class="link ancor">Портфолио</a></li>
+          <li class="item"><a href="./portfolio.html" class="link ancor current">Портфолио</a></li>
           <li class="item"><a href="#" class="link ancor">Контакты</a></li>
         </ul>
       </nav>
