--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="./index.html" class="logo ancor"><span class="web">Web</span> Studio</a>
   
         <ul class="site-nav list">
-          <li class="item"><a href="./index.html" class="link ancor current">Студия</a></li>
+          <li class="item current"><a href="./index.html" class="link ancor">Студия</a></li>
           <li class="item"><a href="./portfolio.html" class="link ancor">Портфолио</a></li>
           <li class="item"><a href="#" class="link ancor">Контакты</a></li>
         </ul>
@@ -117,16 +117,22 @@
       <div class="container">
         <ul class="list spec-list">
           <li class="spec-item">
-            <img src="./images/desctop.jpg" alt="Ноутбук" width="370">
+            <div class="spec-overlay">
+              <img src="./images/desctop.jpg" alt="Ноутбук" width="370">
             <h3 class="spec-titles">Десктопные приложения</h3>
+            </div>
           </li>
           <li class="spec-item">
-            <img src="./images/smartphone.jpg" alt="Смартфон" width="370">
+            <div class="spec-overlay">
+              <img src="./images/smartphone.jpg" alt="Смартфон" width="370">
             <h3 class="spec-titles">Мобильные приложения</h3>
+            </div>
           </li>
           <li class="spec-item">
-            <img src="./images/comp.jpg" alt="Дизайн" width="370">
+            <div class="spec-overlay">
+              <img src="./images/comp.jpg" alt="Дизайн" width="370">
             <h3 class="spec-titles">Дизайнерские решения</h3>
+            </div>
           </li>
         </ul>
       </div>
