--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="./index.html" class="logo ancor"><span class="web">Web</span> Studio</a>
   
         <ul class="site-nav list">
-          <li class="item current"><a href="./index.html" class="link ancor">Студия</a></li>
+          <li class="item"><a href="./index.html" class="current link ancor">Студия</a></li>
           <li class="item"><a href="./portfolio.html" class="link ancor">Портфолио</a></li>
           <li class="item"><a href="#" class="link ancor">Контакты</a></li>
         </ul>
