--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <header>
+  <header class="header-border">
     <div class="container topline">
       <nav class="main-nav"> 
         <a href="./index.html" class="logo ancor"><span class="web">Web</span> Studio</a>
@@ -53,11 +53,11 @@
     <h2 class="visually-hidden">Фильтры</h2> 
     <ul class="list container">
       <div class="filters-list">
-        <li class="item"><a href="#" class="button-primary ancor">Все</a></li>
-        <li class="item"><a href="#" class="button-secondary ancor">Веб-сайты</a></li>
-        <li class="item"><a href="#" class="button-secondary ancor">Приложения</a></li>
-        <li class="item"><a href="#" class="button-secondary ancor">Дизайн</a></li>
-        <li class="item"><a href="#" class="button-secondary ancor">Маркетинг</a></li>
+        <li class="item"><a href="#" class="button-portfolio ancor">Веб-сайты</a></li>
+        <li class="item"><a href="#" class="button-portfolio ancor">Приложения</a></li>
+        <li class="item"><a href="#" class="button-portfolio ancor">Все</a></li>
+        <li class="item"><a href="#" class="button-portfolio ancor">Дизайн</a></li>
+        <li class="item"><a href="#" class="button-portfolio ancor">Маркетинг</a></li>
       </div>
     </ul>
   </section>
@@ -193,9 +193,14 @@
     <div class="footer-container">
       <p class="connect">Подписаться на рассылку</p>
       <input type="email" placeholder="E-mail" class="email">
-      <button class="button btn-add">Подписаться</button>
-    </div>
+      <button 
+      class="button"><span class="btn-text">Подписаться</span></button>
+        <svg class="btn-icon" width="24" height="24">
+        <use href="./images/sprite.svg#send"></use> 
+      </svg>
     
+
+    </div>
   </div>
   <p class="copyright">2020 | Developed by GoIT Students </p> 
   
