--- a/index.html
+++ b/index.html
@@ -386,13 +386,7 @@
       <div class="footer-container">
         <p class="connect">Подписаться на рассылку</p>
         <input type="email" placeholder="E-mail" class="email">
-        <button 
-        class="button"><span class="btn-text">Подписаться</span></button>
-          <svg class="btn-icon" width="24" height="24">
-          <use href="./images/sprite.svg#send"></use> 
-        </svg>
-      
-
+        <button class="button"><span class="btn-text">Подписаться</span></button>
       </div>
     </div>
     <p class="copyright">2020 | Developed by GoIT Students </p> 
