--- a/portfolio.html
+++ b/portfolio.html
@@ -69,73 +69,91 @@
     <div class="container">
       <ul class="examples list flex-examples">
         <li class="flex-examples-elements">
-          <a href="#"><img src="./images/techno.jpg" alt="Технокряк" width="370"></a>
-          <div class="card-content">
+          <div class="examples-overlay">
+            <a href="#"><img src="./images/techno.jpg" alt="Технокряк" width="370"></a>
             <p class="examples-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+          </div>
+          <div class="card-content">
             <h2 class="examples-headings">Технокряк</h2>
             <p class="examples-type">Веб-сайт</p>
           </div>
         </li>
         <li class="flex-examples-elements">
-          <a href="#"><img src="./images/poster.jpg" alt="Постер New Orlean vs Golden Stars" width="370"></a>
-          <div class="card-content">
+          <div class="examples-overlay">
+            <a href="#"><img src="./images/poster.jpg" alt="Постер New Orlean vs Golden Stars" width="370"></a>
             <p class="examples-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+          </div>
+          <div class="card-content">
             <h2 class="examples-headings">Постер New Orlean vs Golden Star</h2>
             <p class="examples-type">Дизайн</p>
           </div>
         </li>
         <li class="flex-examples-elements">
-          <a href="#"><img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370"></a>
-          <div class="card-content">
+          <div class="examples-overlay">
+            <a href="#"><img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370"></a>
             <p class="examples-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+          </div>
+          <div class="card-content">
             <h2 class="examples-headings">Ресторан Seafood</h2>
             <p class="examples-type">Приложение</p>
           </div>
         </li>
         <li class="flex-examples-elements">
-          <a href="#"><img src="./images/headphones.jpg" alt="Наушники" width="370"></a>
-          <div class="card-content">
+          <div class="examples-overlay">
+            <a href="#"><img src="./images/headphones.jpg" alt="Наушники" width="370"></a>
             <p class="examples-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+          </div>
+          <div class="card-content">
             <h2 class="examples-headings">Проект Prime</h2>
             <p class="examples-type">Маркетинг</p>
           </div>
         </li>
         <li class="flex-examples-elements">
-          <a href="#"><img src="./images/boxes.jpg" alt="Ящики" width="370"></a>
-          <div class="card-content">
+          <div class="examples-overlay">
+            <a href="#"><img src="./images/boxes.jpg" alt="Ящики" width="370"></a>
             <p class="examples-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+          </div>
+          <div class="card-content">
             <h2 class="examples-headings">Проект Boxes</h2>
             <p class="examples-type">Приложение</p>
           </div>
         </li>
         <li class="flex-examples-elements">
-          <a href="#"><img src="./images/comp.jpg" alt="Монитор" width="370"></a>
-          <div class="card-content">
+          <div class="examples-overlay">
+            <a href="#"><img src="./images/comp.jpg" alt="Монитор" width="370"></a>
             <p class="examples-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+          </div>
+          <div class="card-content">
             <h2 class="examples-headings">Inspiration has no Borders</h2>
             <p class="examples-type">Веб-сайт</p>
           </div>
         </li>
         <li class="flex-examples-elements">
-          <a href="#"><img src="./images/magazine.jpg" alt="Журнал" width="370"></a>
-          <div class="card-content">
+          <div class="examples-overlay">
+            <a href="#"><img src="./images/magazine.jpg" alt="Журнал" width="370"></a>
             <p class="examples-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+          </div>
+          <div class="card-content">
             <h2 class="examples-headings">Издание Limited Edition</h2>
             <p class="examples-type">Дизайн</p>
           </div>
         </li>
         <li class="flex-examples-elements">
-          <a href="#"><img src="./images/lab.jpg" alt="Этикетка" width="370"></a>
-          <div class="card-content">
+          <div class="examples-overlay">
+            <a href="#"><img src="./images/lab.jpg" alt="Этикетка" width="370"></a>
             <p class="examples-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+          </div>
+          <div class="card-content">
             <h2 class="examples-headings">Проект LAB</h2>
             <p class="examples-type">Маркетинг</p>
           </div>
         </li>
         <li class="flex-examples-elements">
-          <a href="#"><img src="./images/desctop.jpg" alt="Ноутбук" width="370"></a>
-          <div class="card-content">
+          <div class="examples-overlay">
+            <a href="#"><img src="./images/desctop.jpg" alt="Ноутбук" width="370"></a>
             <p class="examples-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+          </div>
+          <div class="card-content">
             <h2 class="examples-headings">Growing Business</h2>
             <p class="examples-type">Приложение</p>
           </div>
