--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <header>
+  <header class="header-fixed">
     <div class="container topline">
       <nav class="main-nav"> 
         <a href="./index.html" class="logo ancor"><span class="web">Web</span> Studio</a>
@@ -390,7 +390,15 @@
       </div>
     </div>
     <p class="copyright">2020 | Developed by GoIT Students </p> 
-    
   </footer>
+
+  <script>
+    const { height: pageHeaderHeight } = document
+      .querySelector(".header-fixed")
+      .getBoundingClientRect();
+
+    document.body.style.paddingTop = `${pageHeaderHeight}px`;
+  </script>
+
 </body>
 </html>
