--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <header class="header-border">
+  <header class="header-border header-fixed">
     <div class="container topline">
       <nav class="main-nav"> 
         <a href="./index.html" class="logo ancor"><span class="web">Web</span> Studio</a>
@@ -220,9 +220,17 @@
 
     </div>
   </div>
-  <p class="copyright">2020 | Developed by GoIT Students </p> 
-  
-</footer>
+  <p class="copyright">2020 | Developed by GoIT Students </p>
+ </footer>
+
+ <script>
+  const { height: pageHeaderHeight } = document
+    .querySelector(".header-fixed")
+    .getBoundingClientRect();
+
+  document.body.style.paddingTop = `${pageHeaderHeight}px`;
+</script>
+
 </body>
 
 </html>
