adds modal window to footer button

--- a/index.html
+++ b/index.html
@@ -386,12 +386,42 @@
       <div class="footer-container">
         <p class="connect">Подписаться на рассылку</p>
         <input type="email" placeholder="E-mail" class="email">
-        <button class="button"><span class="btn-text">Подписаться</span></button>
+        <button class="button" data-open-modal><span class="btn-text">Подписаться</span></button>
       </div>
     </div>
     <p class="copyright">2020 | Developed by GoIT Students </p> 
   </footer>
 
+  <!-- Модалка -->
+  <div class="backdrop is-hidden" data-backdrop>
+    <div class="modal">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos minus vitae veritatis at molestias dignissimos expedita qui asperiores sapiente placeat! Sed tenetur, ab in exercitationem aspernatur praesentium vitae a laudantium dicta deserunt error necessitatibus est natus facere temporibus non enim soluta doloremque odio vel aliquid perspiciatis sint quasi quo? Odit sunt quisquam, quaerat modi quos doloremque iure doloribus sit, debitis nemo dignissimos quidem dolores ipsam, quasi consectetur beatae ex. Fugiat sunt quas hic tempora debitis, molestiae qui mollitia dolor aspernatur, accusamus temporibus. Reiciendis porro alias enim recusandae eius harum animi accusamus dolorem? Cum aspernatur tempora in! Asperiores quibusdam doloribus labore?</p>
+      <button data-close-modal>Закрыть</button>
+    </div>
+  </div>
+  
+  <script>
+    const refs = {
+      openModalBtn: document.querySelector("[data-open-modal]"),
+      closeModalBtn: document.querySelector("[data-close-modal]"),
+      backdrop: document.querySelector("[data-backdrop]"),
+    };
+
+    refs.openModalBtn.addEventListener("click", toggleModal);
+    refs.closeModalBtn.addEventListener("click", toggleModal);
+
+    refs.backdrop.addEventListener("click", logBackdropClick);
+
+    function toggleModal() {
+      refs.backdrop.classList.toggle("is-hidden");
+    }
+
+    function logBackdropClick() {
+      console.log("Это клик в бекдроп");
+    }
+  </script>
+
+<!-- Отступ на боди для фиксированного хедера -->
   <script>
     const { height: pageHeaderHeight } = document
       .querySelector(".header-fixed")
